Add H100 remote keys for plugins to the manual.  For the vast majority of plugins this is just exit.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22000 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/platform/remote-keymap-h100.tex
+++ b/manual/platform/remote-keymap-h100.tex
@@ -21,8 +21,8 @@
 \newcommand{\ActionRCStdContext}{Long \ButtonRCSelect}
 \newcommand{\ActionRCStdQuickScreen}{Long \ButtonRCMode}
 \newcommand{\ActionRCQuickScreenExit}{\ButtonRCMode}
-\newcommand{\ActionRCStdMenu}{\ButtonMode}
-\newcommand{\ActionRCStdOk}{\ButtonSelect}
+\newcommand{\ActionRCStdMenu}{\ButtonRCMode}
+\newcommand{\ActionRCStdOk}{\ButtonRCSelect}
 
 %Button actions, wps context
 \newcommand{\ActionRCWpsPlay}{\ButtonRCOn}
