--- a/manual/plugins/disktidy.tex
+++ b/manual/plugins/disktidy.tex
@@ -23,7 +23,7 @@
   \begin{table}
     \begin{btnmap}{}{}
       \ActionStdCancel
-        \opt{HAVEREMOTEPAD}{&}
+        \opt{HAVEREMOTEPAD}{& \ActionRCStdCancel}
       & Exit / Abort\\
     \end{btnmap}
 \end{table}
