--- a/manual/plugins/flipit.tex
+++ b/manual/plugins/flipit.tex
@@ -61,7 +61,9 @@ a screen containing tokens of only one colour.
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_C200_PAD}{\ButtonPower}
 \opt{GIGABEAT_S_PAD}{\ButtonBack}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+        }
     & Quit the game \\
 \end{btnmap}
 \end{table}
