--- a/manual/plugins/jackpot.tex
+++ b/manual/plugins/jackpot.tex
@@ -8,10 +8,14 @@ have 20\$.  Payouts are given when three matching symbols come up.
 \begin{table}
 \begin{btnmap}{}{}
     \opt{PLAYER_PAD}{\ButtonPlay}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCSelect}
+        }
     & Play \\
     \opt{PLAYER_PAD}{\ButtonStop}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+        }
     & Exit the game \\
 \end{btnmap}
 \end{table}
