--- a/manual/plugins/mazezam.tex
+++ b/manual/plugins/mazezam.tex
@@ -28,7 +28,9 @@ Luckily, there are checkpoints at levels four and eight.
     \opt{IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,SANSA_FUZE_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{&
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+        }
     & Menu\\
 \end{btnmap}
 \end{table}
