--- a/manual/plugins/sliding.tex
+++ b/manual/plugins/sliding.tex
@@ -45,7 +45,9 @@ Key controls:
       ,MROBE100_PAD}{\ButtonPower}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
   \opt{GIGABEAT_S_PAD}{\ButtonBack}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+        }
   & Stop the game \\
   \end{btnmap}
 \end{table}
