--- a/manual/plugins/sokoban.tex
+++ b/manual/plugins/sokoban.tex
@@ -27,7 +27,9 @@ information about the level format, see
 \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_PAD,MROBE100_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
 \opt{GIGABEAT_S_PAD}{\ButtonMenu}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{&
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+         }
     & Menu \\
 \nopt{IAUDIO_X5_PAD}{
     \opt{RECORDER_PAD,ARCHOS_AV300_PAD}{\ButtonFOne}
