--- a/manual/plugins/star.tex
+++ b/manual/plugins/star.tex
@@ -75,7 +75,9 @@ could not otherwise reach. The block cannot take ``o''s.
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-      \opt{HAVEREMOTEKEYMAP}{& }
+      \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+       }
         & Exit the game \\
   \end{btnmap}
 \end{table}
