--- a/manual/plugins/brickmania.tex
+++ b/manual/plugins/brickmania.tex
@@ -43,7 +43,9 @@ effect, you must catch it with the paddle. Look out for the bad ones.\\
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+          }
     & Open menu / Quit\\
     \end{btnmap}
 \end{table}
