--- a/manual/plugins/bubbles.tex
+++ b/manual/plugins/bubbles.tex
@@ -16,7 +16,9 @@ fired. Points are awarded depending on how quickly the level was completed.
     \opt{IAUDIO_X5_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
     \opt{GIGABEAT_PAD}{\ButtonA}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCPlay}
+           }
         & Pause game\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD%
         ,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD}
@@ -45,7 +47,9 @@ fired. Points are awarded depending on how quickly the level was completed.
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCPlay}
+            }
         & Exit to menu\\
     \end{btnmap}
 \end{table}
