--- a/manual/plugins/calculator.tex
+++ b/manual/plugins/calculator.tex
@@ -61,7 +61,9 @@ standard calculator. Pressing the ``1st'' and ``2nd'' buttons will toggle betwee
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{&
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+       }
     & Quit\\
 \end{btnmap}
 \end{table}
