--- a/manual/plugins/cube.tex
+++ b/manual/plugins/cube.tex
@@ -47,7 +47,9 @@ This is a rotating cube screen saver in 3D.
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+       }
         & Quit\\
     \end{btnmap}
 \end{table}
