--- a/manual/plugins/dice.tex
+++ b/manual/plugins/dice.tex
@@ -11,7 +11,9 @@ numbers as well as the total of the rolled dice.
     \opt{PLAYER_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD%
         ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCPlay}
+        }
         & Roll dice again\\
     \opt{PLAYER_PAD}{\ButtonStop}
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOff}
@@ -19,7 +21,9 @@ numbers as well as the total of the rolled dice.
     \opt{IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD%
         ,IRIVER_H10_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+        }
         & Quit\\
     \end{btnmap}
 \end{table}
