--- a/manual/plugins/minesweeper.tex
+++ b/manual/plugins/minesweeper.tex
@@ -76,7 +76,9 @@ the location of a mine, it can be tagged to avoid accidentally
   \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
   \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonMenu}
   \opt{GIGABEAT_S_PAD}{\ButtonBack}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+        }
   & Exit the game \\
 \end{btnmap}
 \end{table}
