--- a/manual/plugins/plasma.tex
+++ b/manual/plugins/plasma.tex
@@ -23,7 +23,9 @@ Plasma is a demo displaying a 80's style retro plasma effect.
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}
         {\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-      \opt{HAVEREMOTEKEYMAP}{& }
+      \opt{HAVEREMOTEKEYMAP}{&
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+       }
     & Quit\\
     \end{btnmap}
 \end{table}
