--- a/manual/plugins/random_folder_advance_config.tex
+++ b/manual/plugins/random_folder_advance_config.tex
@@ -28,10 +28,18 @@ it you need to have both \fname{-/CDs} and \fname{CDs} as entries.
 \subsubsection{Folder List Editor Keys}
 \begin{table}
 \begin{btnmap}{}{}
-    \ActionStdOk{} \opt{HAVEREMOTEKEYPAD}{&} & Delete selected folder\\
-    \ActionStdContext{} \opt{HAVEREMOTEKEYPAD}{&}
-        & Bring up the context menu which allows you to
-        remove the selected folder or it's entire folder tree\\
-    \ActionStdCancel{} \opt{HAVEREMOTEKEYPAD}{&} & Exit\\
+    \ActionStdOk{} 
+        \opt{HAVEREMOTEKEYPAD}{& \ActionRCStdOk} 
+     & Delete selected folder\\
+
+    \ActionStdContext{} 
+        \opt{HAVEREMOTEKEYPAD}{& \ActionRCStdContext}
+     & Bring up the context menu which allows you to
+     remove the selected folder or it's entire folder tree\\
+
+    \ActionStdCancel{} 
+        \opt{HAVEREMOTEKEYPAD}{& \ActionRCStdCancel} 
+    & Exit\\
+
 \end{btnmap}
 \end{table}
