--- a/manual/plugins/rockblox.tex
+++ b/manual/plugins/rockblox.tex
@@ -76,7 +76,9 @@ the blocks fall faster. If the pile of blocks reaches the ceiling, the game is o
     \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonMenu+\ButtonSelect}
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-       \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+        }
         & Quit\\
     \end{btnmap}
 \end{table}
