--- a/manual/plugins/starfield.tex
+++ b/manual/plugins/starfield.tex
@@ -26,7 +26,9 @@ Starfield simulation (like the classic screensaver).
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
     \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,RECORDER_PAD,ONDIO_PAD}{\ButtonOff}
-  \opt{HAVEREMOTEKEYMAP}{& }
+  \opt{HAVEREMOTEKEYMAP}{&
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+  }
     & Quit\\
     \end{btnmap}
 \end{table}
