--- a/manual/plugins/stopwatch.tex
+++ b/manual/plugins/stopwatch.tex
@@ -11,7 +11,9 @@ A simple stopwatch program with support for saving times.
     \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
         ,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
-  \opt{HAVEREMOTEKEYMAP}{& }
+       \opt{HAVEREMOTEKEYMAP}{& 
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+        }
     & Quit Plugin \\
     %
     \opt{PLAYER_PAD,RECORDER_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD,GIGABEAT_S_PAD}{\ButtonPlay}
