--- a/manual/plugins/vumeter.tex
+++ b/manual/plugins/vumeter.tex
@@ -16,7 +16,9 @@ and the meter scale can be changed.
 \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD,SANSA_E200_PAD,SANSA_C200_PAD,GIGABEAT_PAD%
      ,MROBE100_PAD}{\ButtonPower}
 \opt{GIGABEAT_S_PAD}{\ButtonBack}
-  \opt{HAVEREMOTEKEYMAP}{& }
+  \opt{HAVEREMOTEKEYMAP}{&
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+  }
     & Save settings and quit\\
 \opt{RECORDER_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
 \opt{ONDIO_PAD}{\ButtonMenu}
