Ooops, correct H100 remote button to exit bubbles (manual).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22001 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/bubbles.tex
+++ b/manual/plugins/bubbles.tex
@@ -48,7 +48,7 @@ fired. Points are awarded depending on how quickly the level was completed.
         ,MROBE100_PAD}{\ButtonPower}
     \opt{GIGABEAT_S_PAD}{\ButtonBack}
        \opt{HAVEREMOTEKEYMAP}{& 
-          \opt{IRIVER_RC_H100_PAD}{\ButtonRCPlay}
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
             }
         & Exit to menu\\
     \end{btnmap}
