Oops no. 2 - It is \ButtonRCOn not \ButtonRCPlay.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22002 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/bubbles.tex
+++ b/manual/plugins/bubbles.tex
@@ -17,7 +17,7 @@ fired. Points are awarded depending on how quickly the level was completed.
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
     \opt{GIGABEAT_PAD}{\ButtonA}
        \opt{HAVEREMOTEKEYMAP}{& 
-          \opt{IRIVER_RC_H100_PAD}{\ButtonRCPlay}
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCOn}
            }
         & Pause game\\
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD,IRIVER_H10_PAD%
