--- a/manual/plugins/dice.tex
+++ b/manual/plugins/dice.tex
@@ -12,7 +12,7 @@ numbers as well as the total of the rolled dice.
         ,GIGABEAT_S_PAD,MROBE100_PAD}{\ButtonPlay}
     \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonUp}
        \opt{HAVEREMOTEKEYMAP}{& 
-          \opt{IRIVER_RC_H100_PAD}{\ButtonRCPlay}
+          \opt{IRIVER_RC_H100_PAD}{\ButtonRCOn}
         }
         & Roll dice again\\
     \opt{PLAYER_PAD}{\ButtonStop}
