Fix manual button tables for disktidy, mpegplayer, text editor and random folder advance config plugins.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22004 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/disktidy.tex
+++ b/manual/plugins/disktidy.tex
@@ -23,7 +23,7 @@
   \begin{table}
     \begin{btnmap}{}{}
       \ActionStdCancel
-        \opt{HAVEREMOTEPAD}{& \ActionRCStdCancel}
+        \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdCancel}
       & Exit / Abort\\
     \end{btnmap}
 \end{table}
