--- a/manual/plugins/mpegplayer.tex
+++ b/manual/plugins/mpegplayer.tex
@@ -22,6 +22,7 @@ option and choose \setting{mpegplayer}.
     \opt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ButtonLeft{} or  \ButtonVolDown{} /
        \opt{HAVEREMOTEKEYMAP}{& }
         \ButtonRight{} or \ButtonVolUp}
+       \opt{HAVEREMOTEKEYMAP}{& }
     & Adjust volume up / down\\
     \nopt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ActionWpsSkipPrev{} / \ActionWpsSkipNext}
     \opt{GIGABEAT_S_PAD,GIGABEAT_PAD}{\ButtonUp{} / \ButtonDown}
