--- a/manual/plugins/text_editor.tex
+++ b/manual/plugins/text_editor.tex
@@ -21,19 +21,19 @@ the \setting{Virtual Keyboard} (see \reference{sec:virtual_keyboard}).
 \begin{table}
     \begin{btnmap}{}{}
     \ActionStdOk 
-      \opt{HAVEREMOTEKEYPAD}{& \ActionRCStdOk}
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdOk}
     & Edit Line / Select Character\\
 
     \ActionStdCancel 
-      \opt{HAVEREMOTEKEYPAD}{& \ActionRCStdCancel} 
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdCancel} 
     & Exit / Abort Editing\\
 
     \ActionStdMenu 
-      \opt{HAVEREMOTEKEYPAD}{& \ActionRCStdMenu} 
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdMenu} 
     & Show Item Menu\\
 
     \ActionStdContext 
-      \opt{HAVEREMOTEKEYPAD}{& \ActionRCStdContext} 
+      \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdContext} 
     & Delete Line\\
     \end{btnmap}
 \end{table}
