--- a/manual/plugins/random_folder_advance_config.tex
+++ b/manual/plugins/random_folder_advance_config.tex
@@ -29,16 +29,16 @@ it you need to have both \fname{-/CDs} and \fname{CDs} as entries.
 \begin{table}
 \begin{btnmap}{}{}
     \ActionStdOk{} 
-        \opt{HAVEREMOTEKEYPAD}{& \ActionRCStdOk} 
+        \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdOk} 
      & Delete selected folder\\
 
     \ActionStdContext{} 
-        \opt{HAVEREMOTEKEYPAD}{& \ActionRCStdContext}
+        \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdContext}
      & Bring up the context menu which allows you to
      remove the selected folder or it's entire folder tree\\
 
     \ActionStdCancel{} 
-        \opt{HAVEREMOTEKEYPAD}{& \ActionRCStdCancel} 
+        \opt{HAVEREMOTEKEYMAP}{& \ActionRCStdCancel} 
     & Exit\\
 
 \end{btnmap}
