Fix wrong text colour in help, adapt pegbox manual to r21867
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22016 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/pegbox.tex
+++ b/manual/plugins/pegbox.tex
@@ -48,7 +48,7 @@ block and crosses which allow you to choose a replacement block.
     \opt{MROBE100_PAD}{\ButtonSelect}
     \opt{SANSA_C200_PAD}{\ButtonSelect}
       \opt{HAVEREMOTEKEYMAP}{& }
-        & to select/save\\
+        & to choose peg\\
 
     \opt{RECORDER_PAD}{\ButtonFTwo}
     \opt{ONDIO_PAD}{\ButtonMenu + \ButtonRight}
