--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -137,6 +137,8 @@ the associated file. Viewers are stored in the
 
 \opt{lcd_bitmap}{\opt{swcodec}{\input{plugins/mpegplayer.tex}}}
 
+\opt{lcd_bitmap}{\opt{lcd_color}{\input{plugins/pngviewer.tex}}}
+
 \opt{lcd_color}{\input{plugins/ppmviewer.tex}}
 
 \opt{recorder,recorderv2fm,ondio}{\input{plugins/rockbox_flash.tex}}
