--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -45,7 +45,7 @@
 #    Refonte totale du fichier par Mustapha Senhaji (Moos) <moos75 AT gmail.com>
 #    Nov 2005, Avr 2006, Mai 2006, Juil 2006, Oct 2006, Dec 2006, Mar 2007, Sep 2007,
 #    Oct 2007, Nov 2007, Dec 2007, Jan 2008, Avril 2008, Août 2008, Oct 2008
-#    Dec 2008, Fév 2009
+#    Dec 2008, Fév 2009, Août 2009
 #
 <phrase>
   id: LANG_SET_BOOL_YES
@@ -292,13 +292,14 @@
   <source>
     *: "PLAY = Yes"
     h100,h120,h300: "NAVI = Yes"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Yes"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,clip*,fuze*: "SELECT = Yes"
     player: "(PLAY/STOP)"
   </source>
   <dest>
     *: "PLAY = Oui"
     h100,h120,h300: "NAVI = Oui"
-    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,sa9200: "SELECT = Oui"
+    yh*,ipod*,x5,m5,gigabeat*,e200*,c200*,h10,h10_5gb,mrobe100,clip*,fuze*: "SELECT = Oui"
+    mrobe500: "PLAY ou POWER = Oui"
     player: "(PLAY/STOP)"
   </dest>
   <voice>
@@ -2415,14 +2416,16 @@
     h100,h120,h300: "Building database... %d found (STOP to return)"
     ipod*: "Building database... %d found (PREV to return)"
     x5,m5,gigabeat*,mrobe100: "Building database... %d found (LEFT to return)"
-    h10,h10_5gb,e200*,c200*,sa9200: "Building database... %d found (PREV to return)"
+    h10,h10_5gb,e200*,c200*,fuze*: "Building database... %d found (PREV to return)"
+    sa9200: "Building database... %d found (REW to return)"
   </source>
   <dest>
     *: "Création base de données... %d trouvés (OFF = retour)"
     h100,h120,h300: "Création base de données... %d trouvés (STOP = retour)"
     ipod*: "Création base de données... %d trouvés (PREV = retour)"
     x5,m5,gigabeat*,mrobe100: "Création base de données... %d trouvés (LEFT = retour)"
-    h10,h10_5gb,e200*,c200*,sa9200: "Création base de données... %d trouvés (PREV = retour)"
+    h10,h10_5gb,e200*,c200*,fuze*: "Création base de données... %d trouvés (PREV = retour)"
+    sa9200: "Création base de données... %d trouvés (REW = retour)"
   </dest>
   <voice>
     *: "entrées trouvées pour base de données"
@@ -2605,7 +2608,7 @@
   user: core
   <source>
     *: none
-    lcd_bitmap: "Browse Fonts"
+    lcd_bitmap: "Font"
   </source>
   <dest>
     *: none
@@ -2621,13 +2624,13 @@
   desc: in settings_menu()
   user: core
   <source>
-    *: "Browse .wps files"
+    *: "While Playing Screen"
   </source>
   <dest>
-    *: "Charger config. écran de lecture LCD principal"
+    *: "Ecran de lecture LCD principal"
   </dest>
   <voice>
-    *: "Charger config. écran de lecture LCD principal"
+    *: "Ecran de lecture LCD principal"
   </voice>
 </phrase>
 <phrase>
@@ -2636,15 +2639,15 @@
   user: core
   <source>
     *: none
-    remote: "Browse .rwps files"
+    remote: "Remote While Playing Screen"
   </source>
   <dest>
     *: none
-    remote: "Charger config. écran de lecture LCD télécommande"
+    remote: "Ecran de lecture LCD télécommande"
   </dest>
   <voice>
     *: none
-    remote: "Charger config. écran de lecture LCD télécommande"
+    remote: "Ecran de lecture LCD télécommande"
   </voice>
 </phrase>
 <phrase>
@@ -4173,14 +4176,18 @@
   <source>
     *: none
     rtc: "ON = Set"
+    mrobe500: "HEART = Set"
     h100,h120,h300: "NAVI = Set"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Set"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,clip*,fuze*: "SELECT = Set"
+    sa9200: "PLAY = Set"
   </source>
   <dest>
     *: none
     rtc: "ON = Valider"
+    mrobe500: "HEART = Valider"
     h100,h120,h300: "NAVI = Valider"
-    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,sa9200: "SELECT = Valider"
+    ipod*,x5,m5,h10,h10_5gb,e200*,c200*,gigabeat*,mrobe100,clip*,fuze*: "SELECT = Valider"
+    sa9200: "PLAY = Valider"
   </dest>
   <voice>
     *: none
@@ -4194,17 +4201,20 @@
   <source>
     *: none
     rtc: "OFF = Revert"
+    mrobe500: "POWER = Revert"
     h100,h120,h300: "STOP = Revert"
-    ipod*,c200*,sa9200: "MENU = Revert"
+    ipod*,c200*: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*,fuze*: "PREV = Revert"
     gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
+    sa9200: "LEFT = Revert"
   </source>
   <dest>
     *: none
     rtc: "OFF = Annuler"
+    mrobe500: "POWER = Annuler"
     h100,h120,h300: "STOP = Annuler"
     ipod*,c200*,sa9200: "MENU = Annuler"
     x5,m5: "RECORD = Annuler"
@@ -4212,6 +4222,7 @@
     gigabeatf: "POWER = Annuler"
     mrobe100: "DISPLAY = Annuler"
     gigabeats: "BACK = Annuler"
+    sa9200: "LEFT = Annuler"
   </dest>
   <voice>
     *: none
@@ -5139,7 +5150,7 @@
   desc: in the main menu
   user: core
   <source>
-    *: "Browse Themes"
+    *: "Browse Theme Files"
   </source>
   <dest>
     *: "Liste des thèmes"
@@ -8003,11 +8014,11 @@
   </source>
   <dest>
     *: none
-    pitchscreen: "Vitesse de lecture"
+    pitchscreen: "Hauteur de ton"
   </dest>
   <voice>
     *: none
-    pitchscreen: "Vitesse de lecture"
+    pitchscreen: "Hauteur de ton"
   </voice>
 </phrase>
 <phrase>
@@ -8020,7 +8031,7 @@
   </source>
   <dest>
     *: none
-    pitchscreen: "Aug. Hauteur de ton"
+    pitchscreen: "Augmenter la hauteur"
   </dest>
   <voice>
     *: none
@@ -8037,7 +8048,7 @@
   </source>
   <dest>
     *: none
-    pitchscreen: "Dim. Hauteur de ton"
+    pitchscreen: "Diminuer la hauteur"
   </dest>
   <voice>
     *: none
@@ -8054,7 +8065,7 @@
   </source>
   <dest>
     *: none
-    pitchscreen: "Aug. d'un demi-ton"
+    pitchscreen: "Augmenter d'un demi-ton"
   </dest>
   <voice>
     *: none
@@ -8071,7 +8082,7 @@
   </source>
   <dest>
     *: none
-    pitchscreen: "Dim. d'un demi-ton"
+    pitchscreen: "Diminuer d'un demi-ton"
   </dest>
   <voice>
     *: none
@@ -12361,7 +12372,7 @@
 </phrase>
 <phrase>
   id: LANG_TOUCHSCREEN_MODE
-  desc: in Settings -> General -> System menu
+  desc: in Settings -> General -> Display -> Touchscreen Settings
   user: core
   <source>
     *: none
@@ -12378,7 +12389,7 @@
 </phrase>
 <phrase>
   id: LANG_TOUCHSCREEN_GRID
-  desc: in Settings -> General -> System menu
+  desc: in Settings -> General -> Display -> Touchscreen Settings
   user: core
   <source>
     *: none
@@ -12395,7 +12406,7 @@
 </phrase>
 <phrase>
   id: LANG_TOUCHSCREEN_POINT
-  desc: in Settings -> General -> System menu
+  desc: in Settings -> General -> Display -> Touchscreen Settings
   user: core
   <source>
     *: none
@@ -12422,5 +12433,186 @@
   </dest>
   <voice>
     *: "Interdire le changement de piste"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TIMESTRETCH
+  desc: timestretch enable
+  user: core
+  <source>
+    *: none
+    swcodec: "Timestretch"
+  </source>
+  <dest>
+    *: none
+    swcodec: "Dilatation/Compression temporelle"
+  </dest>
+  <voice>
+    *: none
+    swcodec: "Dilatation ou compression temporelle"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_SPEED
+  desc: timestretch speed
+  user: core
+  <source>
+    *: none
+    swcodec: "Speed"
+  </source>
+  <dest>
+    *: none
+    swcodec: "Vitesse"
+  </dest>
+  <voice>
+    *: none
+    swcodec: "Vitesse"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_SETTINGS
+  desc: in Settings -> General -> Display menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "Touchscreen Settings"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Réglages écran tactile"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Réglages écran tactile"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_CALIBRATE
+  desc: in Settings -> General -> Display -> Touchscreen Settings
+  user: core
+  <source>
+    *: none
+    touchscreen: "Calibrate"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Ajuster"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Ajuster"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_RESET_CALIBRATION
+  desc: in Settings -> General -> Display -> Touchscreen Settings
+  user: core
+  <source>
+    *: none
+    touchscreen: "Reset Calibration"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Réinitialiser l'ajustement"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Réinitialiser l'ajustement"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_STATUSBAR_TOP
+  desc: in Settings -> General -> Display -> statusbar
+  user: core
+  <source>
+    *: "Top"
+  </source>
+  <dest>
+    *: "En haut"
+  </dest>
+  <voice>
+    *: "En haut"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_STATUSBAR_BOTTOM
+  desc: in Settings -> General -> Display -> statusbar
+  user: core
+  <source>
+    *: "Bottom"
+  </source>
+  <dest>
+    *: "En bas"
+  </dest>
+  <voice>
+    *: "En bas"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_REMOTE_STATUSBAR
+  desc: in Settings -> General -> Display -> statusbar
+  user: core
+  <source>
+    *: none
+    remote: "Remote Statusbar"
+  </source>
+  <dest>
+    *: none
+    remote: "Barre d'état télécommande"
+  </dest>
+  <voice>
+    *: none
+    remote: "Barre d'état télécommande"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_SEMITONE
+  desc: 
+  user: core
+  <source>
+    *: none
+    pitchscreen: "Semitone"
+  </source>
+  <dest>
+    *: none
+    pitchscreen: "Demi-ton"
+  </dest>
+  <voice>
+    *: none
+    pitchscreen: "Demi-ton"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_STRETCH_LIMIT
+  desc: "limit" in pitch screen
+  user: core
+  <source>
+    *: none
+    pitchscreen: "Limit"
+  </source>
+  <dest>
+    *: none
+    pitchscreen: "Limite"
+  </dest>
+  <voice>
+    *: none
+    pitchscreen: "Limite"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_PLAYBACK_RATE
+  desc: "rate" in pitch screen
+  user: core
+  <source>
+    *: none
+    pitchscreen: "Rate"
+  </source>
+  <dest>
+    *: none
+    pitchscreen: "Taux"
+  </dest>
+  <voice>
+    *: none
+    pitchscreen: "Taux"
   </voice>
 </phrase>
