Add explanation on how to invoke the vbrfix plugin (FS#10530 by David Kauffmann).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22335 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/vbrfix.tex
+++ b/manual/plugins/vbrfix.tex
@@ -4,7 +4,9 @@ MP3 file and updates/creates the Xing VBR header. The Xing header
 contains information about the VBR stream used to calculate average bit
 rate, time information and to more accurately fwd/rew in the stream.
 This function is especially useful when the playback of a file skips,
-fwd/rew does not work correctly or the time display is incorrect. 
+fwd/rew does not work correctly or the time display is incorrect.
+To use this plugin, open the \setting{Context Menu} (see \reference{ref:Contextmenu})
+upon a \fname{.mp3} file and select \setting{Open With... $\rightarrow$ vbrfix}.
 
 \note{VBRfix can only run when music is
   turned off (since it uses the same memory as the player) and can take a
