Use a more appropriated word than the string commited in r21223.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22362 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -12429,10 +12429,10 @@
     *: "Prevent Track Skipping"
   </source>
   <dest>
-    *: "Interdire le changement de piste"
+    *: "Empêcher le changement de piste"
   </dest>
   <voice>
-    *: "Interdire le changement de piste"
+    *: "Empêcher le changement de piste"
   </voice>
 </phrase>
 <phrase>
