remove the rockbox info line saying the AA size and replace it with skin RAM usage
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22364 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/arabic.lang
+++ b/apps/lang/arabic.lang
@@ -4647,19 +4647,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "صورة الألبوم:"
   </dest>
   <voice>
     *: none
-    albumart: "Album Art:"
   </voice>
 </phrase>
 <phrase>
