--- a/apps/lang/espanol.lang
+++ b/apps/lang/espanol.lang
@@ -11960,19 +11960,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Carátula:"
   </dest>
   <voice>
     *: none
-    albumart: "Carátula"
   </voice>
 </phrase>
 <phrase>
