--- a/apps/lang/portugues.lang
+++ b/apps/lang/portugues.lang
@@ -10873,19 +10873,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Capa de Álbum:"
   </dest>
   <voice>
     *: none
-    albumart: "Capa de Álbum:"
   </voice>
 </phrase>
 <phrase>
