--- a/apps/lang/walon.lang
+++ b/apps/lang/walon.lang
@@ -12081,19 +12081,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Imådje albom:"
   </dest>
   <voice>
     *: none
-    albumart: "imådje albom"
   </voice>
 </phrase>
 <phrase>
