--- a/apps/lang/catala.lang
+++ b/apps/lang/catala.lang
@@ -11950,19 +11950,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Caratula:"
   </dest>
   <voice>
     *: none
-    albumart: "Caratula"
   </voice>
 </phrase>
 <phrase>
