--- a/apps/lang/deutsch.lang
+++ b/apps/lang/deutsch.lang
@@ -11978,19 +11978,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Covergröße:"
   </dest>
   <voice>
     *: none
-    albumart: "Covergröße"
   </voice>
 </phrase>
 <phrase>
