--- a/apps/lang/finnish.lang
+++ b/apps/lang/finnish.lang
@@ -11969,19 +11969,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Kansikuva:"
   </dest>
   <voice>
     *: none
-    albumart: "Kansikuva:"
   </voice>
 </phrase>
 <phrase>
