--- a/apps/lang/lietuviu.lang
+++ b/apps/lang/lietuviu.lang
@@ -12148,19 +12148,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Albumo viršelis:"
   </dest>
   <voice>
     *: none
-    albumart: "Albumo viršelis:"
   </voice>
 </phrase>
 <phrase>
