--- a/apps/lang/norsk.lang
+++ b/apps/lang/norsk.lang
@@ -12006,19 +12006,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Albumbilde:"
   </dest>
   <voice>
     *: none
-    albumart: "Albumbilde:"
   </voice>
 </phrase>
 <phrase>
