--- a/apps/lang/polski.lang
+++ b/apps/lang/polski.lang
@@ -12086,19 +12086,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Okładka albumu:"
   </dest>
   <voice>
     *: none
-    albumart: "Okładka albumu"
   </voice>
 </phrase>
 <phrase>
