--- a/apps/lang/russian.lang
+++ b/apps/lang/russian.lang
@@ -11971,19 +11971,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Обложка альбома:"
   </dest>
   <voice>
     *: none
-    albumart: "Обложка альбома"
   </voice>
 </phrase>
 <phrase>
