--- a/apps/lang/tagalog.lang
+++ b/apps/lang/tagalog.lang
@@ -11975,19 +11975,16 @@
 </phrase>
 <phrase>
   id: LANG_ALBUMART
-  desc: Display the expected AA size
-  user: core
+  desc: deprecated
+  user:
   <source>
     *: none
-    albumart: "Album Art:"
   </source>
   <dest>
     *: none
-    albumart: "Album Arte:"
   </dest>
   <voice>
     *: none
-    albumart: ""
   </voice>
 </phrase>
 <phrase>
