Update the french translation.
(Erratum for r22362: I wanted to refer to r21364 and not r21223)



git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22367 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -12613,3 +12613,17 @@
     pitchscreen: "Taux"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_SKIN_RAM_USAGE
+  desc: how much RAM the skins are using
+  user: core
+  <source>
+    *: "Skin RAM usage:"
+  </source>
+  <dest>
+    *: "Tampon écrans de lecture:"
+  </dest>
+  <voice>
+    *: "Tampon des écrans de lecture"
+  </voice>
+</phrase>
