FS#10534: Make scrollbar width variable through a setting (useful for touchscreen targets)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22387 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/english.lang
+++ b/apps/lang/english.lang
@@ -12671,3 +12671,17 @@
     *: "Skin RAM usage"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_SCROLLBAR_WIDTH
+  desc: in Settings -> General -> Display -> Status-/Scrollbar
+  user: core
+  <source>
+    *: "Scroll Bar Width"
+  </source>
+  <dest>
+    *: "Scroll Bar Width"
+  </dest>
+  <voice>
+    *: "Scroll bar width"
+  </voice>
+</phrase>
