Add setting to position the scrollbar on the left or right
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22390 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/english.lang
+++ b/apps/lang/english.lang
@@ -12224,36 +12224,30 @@
 </phrase>
 <phrase>
   id: LANG_LEFT
-  desc: DEPRECATED
+  desc: Generic use of 'left'
   user: core
   <source>
-    *: none
-    quickscreen: ""
+    *: "Left"
   </source>
   <dest>
-    *: none
-    quickscreen: ""
+    *: "Left"
   </dest>
   <voice>
-    *: none
-    quickscreen: ""
+    *: "Left"
   </voice>
 </phrase>
 <phrase>
   id: LANG_RIGHT
-  desc: DEPRECATED
+  desc: Generic use of 'right
   user: core
   <source>
-    *: none
-    quickscreen: ""
+    *: "Right"
   </source>
   <dest>
-    *: none
-    quickscreen: ""
+    *: "Right"
   </dest>
   <voice>
-    *: none
-    quickscreen: ""
+    *: "Right"
   </voice>
 </phrase>
 <phrase>
@@ -12683,5 +12677,19 @@
   </dest>
   <voice>
     *: "Scroll bar width"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_SCROLLBAR_POSITION
+  desc: in Settings -> General -> Display -> Status-/Scrollbar
+  user: core
+  <source>
+    *: "Scroll Bar Position"
+  </source>
+  <dest>
+    *: "Scroll Bar Position"
+  </dest>
+  <voice>
+    *: "Scroll bar position"
   </voice>
 </phrase>
