FS#10199: Adds limiter DSP function
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22394 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/english.lang
+++ b/apps/lang/english.lang
@@ -12699,3 +12699,20 @@
     lcd_bitmap: "Scroll bar position"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_LIMITER
+  desc: in sound settings
+  user: core
+  <source>
+    *: none
+    swcodec: "Limiter Preamp"
+  </source>
+  <dest>
+    *: none
+    swcodec: "Limiter Preamp"
+  </dest>
+  <voice>
+    *: none
+    swcodec: "Limiter Preamp"
+  </voice>
+</phrase>
