FS#10536 by David Kauffmann, make the manual point to the theme site for additional themes instead of the old wiki galleries.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22405 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/theme_settings.tex
+++ b/manual/configure_rockbox/theme_settings.tex
@@ -14,16 +14,31 @@ customize the visual apperance of Rockbox.
 
   There are a number of themes that ship with Rockbox. If none of
   these suit your needs, many more can be downloaded from 
-  \opt{RECORDER_PAD}{\wikilink{WpsArchos}}%
-  \opt{h100}{\wikilink{WpsIriverH100}}%
-  \opt{h300,ipodcolor}{\wikilink{WpsIriverH300}}%
-  \opt{ipodvideo}{\wikilink{WpsIpod5g}}%
-  \opt{ipodnano}{\wikilink{WpsIpodNano}}%
-  \opt{ipodmini}{\wikilink{WpsIpodMini}}%
-  \opt{x5}{\wikilink{WpsIaudioX5}}%
+  \opt{player}{\url{http://themes.rockbox.org/index.php?target=player}}%
+  \opt{recorder}{\url{http://themes.rockbox.org/index.php?target=fmrecorder}}%
+  \opt{recorderv2fm}{\url{http://themes.rockbox.org/index.php?target=fmrecorder}}%
+  \opt{ondiofm}{\url{http://themes.rockbox.org/index.php?target=ondiofm}}%
+  \opt{ondiosp}{\url{http://themes.rockbox.org/index.php?target=ondiosp}}%
+  \opt{m5}{\url{http://themes.rockbox.org/index.php?target=m5}}%
+  \opt{x5}{\url{http://themes.rockbox.org/index.php?target=x5}}%
+  \opt{m3}{\url{http://themes.rockbox.org/index.php?target=m3}}%
+  \opt{h100}{\url{http://themes.rockbox.org/index.php?target=h100}}%
+  \opt{h300}{\url{http://themes.rockbox.org/index.php?target=h300}}%
+  \opt{h10_5gb}{\url{http://themes.rockbox.org/index.php?target=h10_5gb}}%
+  \opt{h10}{\url{http://themes.rockbox.org/index.php?target=h10}}%
+  \opt{ipod1g2g}{\url{http://themes.rockbox.org/index.php?target=ipod1g2g}}%
+  \opt{ipod3g}{\url{http://themes.rockbox.org/index.php?target=ipod3g}}%
+  \opt{ipod4g}{\url{http://themes.rockbox.org/index.php?target=ipod4g}}%
+  \opt{ipodcolor}{\url{http://themes.rockbox.org/index.php?target=ipodcolor}}%
+  \opt{ipodvideo}{\url{http://themes.rockbox.org/index.php?target=ipodvideo}}%
+  \opt{ipodmini}{\url{http://themes.rockbox.org/index.php?target=ipodmini}}%
+  \opt{ipodnano}{\url{http://themes.rockbox.org/index.php?target=ipodnano}}%
+  \opt{e200}{\url{http://themes.rockbox.org/index.php?target=e200}}%
+  \opt{c200}{\url{http://themes.rockbox.org/index.php?target=c200}}%
+  \opt{gigabeatf}{\url{http://themes.rockbox.org/index.php?target=gigabeatf}}%
+  \opt{gigabeats}{\url{http://themes.rockbox.org/index.php?target=gigabeats}}%
+  \opt{mrobe100}{\url{http://themes.rockbox.org/index.php?target=mrobe100}}%
   .
-  Some of the downloads from this website will actually be standalone WPS files, 
-  others will be full-blown themes. 
 
   \note{Themes do not have to be purely visual. It is quite possible to create
     a theme that switches between audio configurations for use in the car, with
